--- a/SuperVanish/messages.yml
+++ b/SuperVanish/messages.yml
@@ -13,31 +13,31 @@
 # Important:
 # You must put your messages in quotes if you use colorcodes and/or special characters like colons! Example: 'Hi: &6%p'
 Messages:
-  NoPermissionMessage: '&4Denied access! You are not allowed to do this.'
+  NoPermissionMessage: '&4Teil ei ole selleks volitusi.'
   VanishMessage: '&c✖ &f%p'
   ReappearMessage: '&a✚ &f%p'
-  VanishMessageWithPermission: '&a[SV] %p vanished.'
-  ReappearMessageWithPermission: '&a[SV] %p reappeared.'
-  OnVanish: '&aYou are now invisible!'
-  OnReappear: '&aYou are no longer invisible!'
-  OnVanishWhileInvisible: '&cYou are already invisible!'
-  OnReappearWhileVisible: '&cYou are not invisible!'
-  InvalidUsageMessage: '&cInvalid usage! /sv [reload|list|tipu|updateCfg] [Player]'
-  RemindingMessage: '&aYou are still invisible!'
+  VanishMessageWithPermission: '&2&lWabariik&7: %p on nüüd nähtamatu.'
+  ReappearMessageWithPermission: '&2&lWabariik&7: %p on taas nähtav.'
+  OnVanish: '&aSa oled nähtamatu!'
+  OnReappear: '&aSa ei ole nähtamatu!'
+  OnVanishWhileInvisible: '&cSa oled juba nähtamatu!'
+  OnReappearWhileVisible: '&cSa ei ole nähtamatu!'
+  InvalidUsageMessage: '&cVale kasutus! /sv [reload|list|tipu|updateCfg] [Kasutajanimi]'
+  RemindingMessage: '&aSa oled ikka veel nähtamatu!'
   ListMessage: '&aInvisible Players:&f %l'
   ActionBarMessage: '&aSa oled hetkel nähtamatu!'
-  HideOtherMessage: '&aPlayer &e%p&a is now invisible!'
-  ShowOtherMessage: '&aPlayer &e%p&a is now visible!'
-  AlreadyInvisibleMessage: '&cPlayer &e%p&c is already invisible!'
-  AlreadyVisibleMessage: '&cPlayer &e%p&c is already visible!'
-  ConfigReloadedMessage: '&aSuccessfully reloaded the configuration. &cPlease note that some options require a server restart to be changed.'
-  InvalidSenderMessage: '&cYou must be a player to execute this command!'
-  PlayerNotOnlineMessage: '&cThat player is not online!'
-  ToggledPickingUpItemsOn: '&ePicking up items is now turned &aON&e.'
-  ToggledPickingUpItemsOff: '&ePicking up items is now turned &cOFF&e.'
-  UpdateWarningMessage: '&cWarning! Updating %updates resets %changes. Please use ''&e/sv updatecfg confirm&c'' to continue.'
-  UpdatedConfigMessage: '&aSuccessfully updated %updates! Please check %changes.'
-  NoConfigUpdateAvailableMessage: '&eYour SuperVanish-files are up to date!'
-  DynmapFakeJoin: '%d joined'
-  DynmapFakeQuit: '%d left'
+  HideOtherMessage: '&aMängja &e%p&a on nüüd nähtamatu!'
+  ShowOtherMessage: '&aMängja &e%p&a on nüüd nähtav!'
+  AlreadyInvisibleMessage: '&cMängja &e%p&c on juba nähtamatu!'
+  AlreadyVisibleMessage: '&cPlayer &e%p&c on juba nähtamatu!'
+  ConfigReloadedMessage: '&aSuurepäraselt on taaslaetud.'
+  InvalidSenderMessage: '&cSa pead olema mängja, et seda käsku kasutada!'
+  PlayerNotOnlineMessage: '&cSee mängja ei ole hetkel sees!'
+  ToggledPickingUpItemsOn: '&eEsemete korjamine nüüd: &aSees&e.'
+  ToggledPickingUpItemsOff: '&eEsemete korjamine nüüd: &cVäljas&e.'
+  UpdateWarningMessage: '&cHoiatus! Uuendame %updates taastame %changes. Palun kasuta ''&e/sv updatecfg confirm&c'' et jätkata.'
+  UpdatedConfigMessage: '&aSuurepäraselt uuendatud %updates! Palun vaata %changes.'
+  NoConfigUpdateAvailableMessage: '&eSinu plugina andmed on uusimad!'
+  DynmapFakeJoin: '%d Liitus'
+  DynmapFakeQuit: '%d Lahkus'
 MessagesVersion: 5.9.2
