--- a/RestrictedCreative/config.yml
+++ b/RestrictedCreative/config.yml
@@ -1,22 +1,22 @@
 messages:
   prefix: '&2&lEhita > '
-  no-permission: '&cYou don''t have enough permissions to do that!'
-  no-console: '&cThis command can only be used in-game.'
+  no-permission: '&cSul ei ole piisavalt volitusi!'
+  no-console: '&cSeda käsku saab kasutada ainult mängus.'
   disabled: '&cSeda ei saa loomingulises moodis teha!'
   disabled-interact: '&cSa ei saa seda teha, sest see on pärit loomingulisest moodist.'
-  reloaded: '&aConfig reloaded!'
-  db-load: '&eLoading data from database...'
-  db-save: '&eSaving data to database...'
-  db-added: '&eAdded %blocks% new blocks to database.'
-  db-removed: '&eDeleted %blocks% old blocks from database.'
-  db-deleted: '&eDeleted database. Full restart is required for changes to take effect.'
-  db-loaded: '&eLoaded %blocks% blocks from database!'
-  db-done: '&aDone! Took %mills%ms'
+  reloaded: '&aKonfiguratsjoon on taaslaetud!'
+  db-load: '&eLaeme andmeid andmebaasist...'
+  db-save: '&eSalvestame andmed andmebaasi...'
+  db-added: '&eLisatud %blocks% uute asjade andmebaasi.'
+  db-removed: '&eKustutatud %blocks% vana ese andmebaasist.'
+  db-deleted: '&eAndmebaas eemaldatud. Serveri restart on vajalik.'
+  db-loaded: '&eLaetud %blocks% kast andmebaasi!'
+  db-done: '&aValmis! Took %mills%ms'
   creative-on: '&aLoominguline mood sees!'
   creative-off: '&aLoominguline mood väljas!'
-  wrong-convert: '&cCorrect usage: /rc convert <cc|gmi|sql>'
-  wrong-block: '&cCorrect usage: /rc block <add|remove|info|stats>'
-  cancel: '&cCancelled!'
+  wrong-convert: '&cVale kasutus: /rc convert <cc|gmi|sql>'
+  wrong-block: '&cÕige kasutus: /rc block <add|remove|info|stats>'
+  cancel: '&cKatkestatud!'
   block-add: '&aRight-click a block/entity you want to add to the database. Type "/rc block add" again to cancel.'
   block-added: '&aAdded %material% to the database!'
   block-remove: '&aRight-click a block/entity you want to remove from the database. Type "/rc block remove" again to cancel.'
